--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
     <title>SoftServe_hw_The Clock</title>
 </head>
-<div id="clock"></div>
+<div id="clock">
+    <p id="monthDay"></p>
+    <p id="hours"></p>
+    <p id="year"></p>
+</div>
 
 <body>
     
